tests/NormalTests/paczka1/fuzzy1/52702251.err
Error in line 1: 7Lg S837 78,9
Error in line 13: xIQW S837 93,03
Error in line 12: xIQW A897 29,3
Error in line 16: xIQW S837 196,9
Error in line 31: xIQW S999 47,7
